# cpp

./: .directory  .gitignore  .gitignore.orig  .gitmodules  CMakeLists.txt  CStorageAdapter.hpp  Dockerfile  FileHandle.cpp  Info.md  LICENSE  Makefile  README.md  Readme.md  main.cpp  readme.md  server_concurrent.c  stl_algorithms.cpp  tcp_server.c
.github/workflows/: algos.yml  ccpp.yml  tasks_queue.yml
105_stl_algos/: CMakeLists.txt  README.md
AbstractFactory/: AbstractFactory.cpp  DrinkFactory.hpp
BoostSerialization/: Makefile
Builder/: Builder.cpp
BuilderFacets/: CMakeLists.txt  Facets.cpp  Person.cpp  Person.hpp  PersonAddressBuilder.hpp  PersonBuilder.cpp  PersonBuilder.hpp  PersonJobBuilder.hpp
CVPluginInterface/: cvpluggininterface.hpp
CvQml/CvQml/: CvQml.pro  main.cpp  qimageprocessor.cpp  qimageprocessor.hpp
FactoryMethod/: CMakeLists.txt
FluentBuild/: CMakeLists.txt  FluentBuilder.cpp
FunctionalFactory/: FunctionalFactory.cpp
Graphics_Viewer_Enhanced_Graphics/Graphics_Viewer/: Graphics_Viewer.pro  mainwindow.ui  qenhancedgraphicsview.cpp  qenhancedgraphicsview.hpp
Graphics_Viewer_scene_coordinates_mapping/Graphics_Viewer/: Graphics_Viewer.pro
GroovyStyleBuilder/: GroovyStyleBuilder.cpp
HelloTest/HelloTest/: pixelcounter.hpp
Hello_Qt_OpenCV/Hello_Qt_OpenCV/: mainwindow.cpp  mainwindow.h  mainwindow.ui
Hello_Qt_OpenCV/Hello_Qt_OpenCV_withTranslation/: mainwindow.h  mainwindow.ui  resources.qrc  translation_ru.qm  translation_ru.ts  translation_ua.qm
ImageMounterPOC/: CMakeLists.txt  SimpleImageMount.cpp
ImageViewer/ImageViewer/: ImageViewer.pro
LiskovSubstitionPrinciple/: LSP.cpp
MeanShiftTracker/MeanShiftTracker/: mainwindow.cpp  qcvmeanshiftthread.cpp
MultithreadedCV_moveToThread/MultithreadedCV/: mainwindow.ui
OpenClosedPrinciple/: OCP.cpp
Painter_Test/Painter_Test/: Painter_Test.pro  mainwindow.ui  qblinkingwidget.hpp
QConcurrentCV/QConcurrentCV/: mainwindow.cpp  mainwindow.ui
QT_QUICK2_Example/QT_QUICK2_Example/: MyRadios.qml  main.qml
QtCvTest/: opencv.pri
QtCvTest/QtCvTest/: main.cpp
SingleResponsibilityPrinciple/: SRP.cpp
Singletone/: CMakeLists.txt  Singletone.cpp  Singletone.hpp  file.txt
adapter_template/: CFSStorage.hpp  CStorageManager.cpp  CStorageManager.hpp
bad/: CMakeLists.txt  Engine.hpp  Fridge.hpp  main.cpp
build_in_docker/: Dockerfile  README.md  docker_test_example_build  main.cpp
ch1/: Makefile  thread_example.cpp
ch10/: main.cpp
ch3/poco/: Makefile  poco_example.cpp
ch3/pthread/: Makefile  pthread_intro.cpp
ch3/pthread_cond/: intro_in_pthread2.cpp
ch3/pthread_rwlock/: Makefile  rw_lock_pthread.cpp
ch4/: Makefile  README.md  dispatcher.cpp  main.cpp
ch5/async_example/: thread_example.cpp
ch5/condition_variable/: Makefile
ch5/packaged_task/: thread_example.cpp
ch5/shared_future/: Makefile
ch5/stdthread2/: thread_example.cpp
ch5/stdthread4/: Makefile
ch5/try_lock_demo/: Makefile
ch9/openmp_example/: Makefile
circular_dependency/: Makefile  circular_deps.cpp
class_for_tests/: CMakeLists.txt  Integer.cpp  Integer.hpp  Product.cpp  Product.hpp  main.cpp
computer_graphics_qt5_opencv3/: Info.md  README.md
computer_graphics_qt5_opencv3/computer_vision/: compute_vision.pro
computer_vision/: compute_vision.pro
computer_vision/copymakeborder_plugin/: copymakeborder_plugin.cpp  copymakeborder_plugin.h  copymakeborder_plugin.pro
computer_vision/transform_plugin/: plugin.ui
cpp_boost_queue/: CMakeLists.txt  readme.md
cpp_boost_queue/src/: CMakeLists.txt  consumers.hpp  main.cpp  producers.hpp
cpp_task_queue/: CMakeLists.txt  readme.md
cpp_task_queue/src/: CMakeLists.txt  Queue.hpp  Storage.cpp  Storage.hpp  TaskQueue.cpp  TaskQueue.hpp  main.cpp
creational_patterns/AbstractFactory/: CMakeLists.txt  HotDrink.hpp  HotDrinkFactory.hpp
creational_patterns/BoostSerialization/: CMakeLists.txt  Serialization.cpp
creational_patterns/Builder/: CMakeLists.txt
creational_patterns/BuilderFacets/: PersonAddressBuilder.hpp  PersonBuilder.hpp  PersonJobBuilder.hpp
creational_patterns/DependencyInjectionPrinciple/: CMakeLists.txt  DIP.cpp
creational_patterns/DependencyInversionPrinciple/: CMakeLists.txt  DIP.cpp
creational_patterns/Factory/: CMakeLists.txt  FactoryPoint.cpp
creational_patterns/FactoryInner/: CMakeLists.txt  InnerFactoryPoint.cpp
creational_patterns/FactoryMethod/: FactoryPoint.cpp  Motivational_Exampe_Point.cpp
creational_patterns/FunctionalFactory/: CMakeLists.txt  CoffeeFactory.hpp  DrinkFactory.hpp  TeaFactory.hpp
dbus_example/: CMakeLists.txt  README.md  cdbus.cpp  cdbus.hpp
fileHandle/: CMakeLists.txt
gmock_example/: CMakeLists.txt  Dockerfile  README.md
gmock_example/src/: CMakeLists.txt  FCFileInfo.cpp  FCFileInfo.hpp  gmock_example.cpp
gmock_example/tests/: CMakeLists.txt  FCFIleInfoTest.cpp  FCFileInfoMock.cpp  FCFileInfoMock.hpp
heapchecker/: CMakeLists.txt  main.c  ptHeader.h  ptld_c.c  ptmain.h
memory_corruption/: README.md
multithreading/ch4/: README.md  (+4 more)
networking_example/: server_concurrent.c  tcp_client.c  tcp_client.py  tcp_server.py  tftp_client.c  udp_broadcasting.cpp
pimpl/: Fridge.hpp  README.md
simd/: CMakeLists.txt  simd.cpp
socket_programming/: CMakeLists.txt  server.cpp
template_match_example/: Makefile  template_match.cpp
thread_template/: CMakeLists.txt  main.cpp
(+104 files in other folders)
